cmake_minimum_required(VERSION 3.14)
project(ds_bobo_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(ds_bobo_1 main.cpp ch01/Array.h ch01/Array.cpp ch02/ArrayStack.cpp ch02/ArrayStack.h ch02/ArrayQueue.cpp ch02/ArrayQueue.h ch02/IQueue.h ch02/LoopQueue.cpp ch02/LoopQueue.h ch04/LinkedList.cpp ch04/LinkedList.h ch02/IStack.h ch04/LinkedListStack.cpp ch04/LinkedListStack.h)